2004-12-21  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/i386/clone.S (__clone): Make sure %esp when
	calling fn is 16 byte aligned.
	* sysdeps/i386/tst-stack-align.h: New file.

	* misc/efgcvt_r.c (FLOAT_MIN_10_EXP, FLOAT_MIN_10_NORM): Define.
	(ecvt_r): Special case denormals.
	* misc/qefgcvt_r.c (FLOAT_MIN_10_EXP, FLOAT_MIN_10_NORM): Define.
	* misc/tst-efgcvt.c: Include float.h.
	(ecvt_tests): Add 2 new tests.

2004-12-20  Roland McGrath  <roland@frob.com>

	* version.h (RELEASE, VERSION): development, 2.3.90
	* include/features.h (__GLIBC_MINOR__): Now 4.

2004-12-20  Jakub Jelinek  <jakub@redhat.com>,
	    Jim Gifford  <giffordj@linkline.com>

	[BZ #562]
	* sysdeps/mips/Makefile (librt-sysdep_routines): Add.
	* sysdeps/unix/mips/rt-sysdep.S: New file.

2004-12-19  Roland McGrath  <roland@redhat.com>

	* iconv/Makefile (test-iconvconfig): New target.
	[$(cross-compiling) != yes] (xtests): Depend on it.

	* iconv/iconvconfig.c (nostdlib, output_file, output_file_len):
	New variables.
	(options, parse_opt, main): Take new options --nostdlib and
	--output/-o to set them.  Under --nostdlib, skip GCONV_PATH dirs.
	(write_output): If output_file is set, write the output there.

2004-12-19  Andreas Jaeger  <aj@suse.de>

	[BZ #560]
	* inet/netinet/in.h: Use __interface_addr instead of __interface.

	[BZ #573]
	* sunrpc/xcrypt.c (passwd2des_internal): Make it hidden instead of
	internal linkage.

2004-12-19  Roland McGrath  <roland@frob.com>

	* version.h (VERSION): 2.3.4.
	* README.template: Various updates.
	* README: Regenerated.
	* NEWS: Mention ports.
	* README-alpha: File removed.

	[BZ #416]
	* locale/langinfo.h: Comment fixes.

2004-12-17  Ulrich Drepper  <drepper@redhat.com>

	* po/ja.po: Update from translation team.

2004-12-17  Richard Henderson  <rth@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/clone.S (__clone): Add support
	for NPTL where the PID is stored at userlevel and needs to be
	reset when CLONE_THREAD is not used.
